[metadata]
name = py2lispIDyOM
version = 0.0.1
author = Xinyi Guan
author_email = xinyi.guan@nyu.edu
description = A Python package for IDyOM
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/xinyiguan/py2lispIDyOM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = py2lispIDyOM
packages = find:
python_requires = >=3.8

[options.packages.find]
where = py2lispIDyOM